[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/Enemy_red_lava.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=3]
[ext_resource path="res://SFX/Enemy_hurt.wav" type="AudioStream" id=4]
[ext_resource path="res://overlays/Hitbox.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 7.5, 9 )

[sub_resource type="CircleShape2D" id=12]
radius = 250.0

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "Hurt",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=15]
radius = 20.0

[node name="Enemy" type="KinematicBody2D" groups=["Enemy"]]
z_index = 5
collision_layer = 4
collision_mask = 7
script = ExtResource( 2 )
damage = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 4 )
shape = SubResource( 11 )

[node name="WanderController" parent="." instance=ExtResource( 3 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
attenuation = 2.0

[node name="AttackKite" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]
z_index = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 12 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Hurt"
playing = true

[node name="Hitbox" parent="." instance=ExtResource( 5 )]
collision_layer = 4
collision_mask = 2
damage = 10
knockback = 5

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 15 )

[node name="InvincibilityTimer" type="Timer" parent="Hitbox"]
wait_time = 0.5

[node name="AttackTimer" type="Timer" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 3, 3 )

[connection signal="timeout" from="AttackKite" to="." method="_on_AttackKite_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Hitbox/InvincibilityTimer" to="Hitbox" method="_on_InvincibilityTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]

[editable path="Hitbox"]
